syntax = "proto3";

package yandex.cloud.serverless.eventrouter.v1;

import "google/api/annotations.proto";
import "google/protobuf/field_mask.proto";
import "yandex/cloud/api/operation.proto";
import "yandex/cloud/access/access.proto";
import "yandex/cloud/serverless/eventrouter/v1/rule.proto";
import "yandex/cloud/operation/operation.proto";
import "yandex/cloud/validation.proto";

option go_package = "github.com/yandex-cloud/go-genproto/yandex/cloud/serverless/eventrouter/v1;eventrouter";
option java_outer_classname = "PERRS";
option java_package = "yandex.cloud.api.serverless.eventrouter.v1";

// A set of methods for managing rules for serverless eventrouter.
service RuleService {
  // Returns the specified rules.
  // To get the list of all available buses, make a [List] request.
  rpc Get (GetRuleRequest) returns (Rule) {
    option (google.api.http) = {get: "/eventrouter/v1/rules/{rule_id}"};
  }

  // Retrieves the list of rules in the specified folder.
  rpc List (ListRulesRequest) returns (ListRulesResponse) {
    option (google.api.http) = { get: "/eventrouter/v1/rules" };
  }

  // Creates a rule in the specified folder.
  rpc Create (CreateRuleRequest) returns (operation.Operation) {
    option (google.api.http) = { post: "/eventrouter/v1/rules" body: "*" };
    option (yandex.cloud.api.operation) = {
      metadata: "CreateRuleMetadata"
      response: "Rule"
    };
  };

  // Updates the specified rule.
  rpc Update (UpdateRuleRequest) returns (operation.Operation) {
    option (google.api.http) = { patch: "/eventrouter/v1/rules/{rule_id}" body: "*" };
    option (yandex.cloud.api.operation) = {
      metadata: "UpdateRuleMetadata"
      response: "Rule"
    };
  };

  // Deletes the specified rule.
  rpc Delete (DeleteRuleRequest) returns (operation.Operation) {
    option (google.api.http) = { delete: "/eventrouter/v1/rules/{rule_id}" };
    option (yandex.cloud.api.operation) = {
      metadata: "DeleteRuleMetadata"
      response: "google.protobuf.Empty"
    };
  };

  // Enables the specified rule.
  rpc Enable (EnableRuleRequest) returns (operation.Operation) {
    option (google.api.http) = {post: "/eventrouter/v1/rules/{rule_id}:enable"};
    option (yandex.cloud.api.operation) = {
      metadata: "EnableRuleMetadata"
      response: "google.protobuf.Empty"
    };
  };

  // Disables the specified rule.
  rpc Disable (DisableRuleRequest) returns (operation.Operation) {
    option (google.api.http) = {post: "/eventrouter/v1/rules/{rule_id}:disable"};
    option (yandex.cloud.api.operation) = {
      metadata: "DisableRuleMetadata"
      response: "google.protobuf.Empty"
    };
  };

  // Lists existing access bindings for the specified rule.
  rpc ListAccessBindings (access.ListAccessBindingsRequest) returns (access.ListAccessBindingsResponse) {
    option (google.api.http) = {get: "/eventrouter/v1/rules/{resource_id}:listAccessBindings"};
  }

  // Sets access bindings for the rule.
  rpc SetAccessBindings (access.SetAccessBindingsRequest) returns (operation.Operation) {
    option (google.api.http) = {
      post: "/eventrouter/v1/rules/{resource_id}:setAccessBindings"
      body: "*"
    };
    option (yandex.cloud.api.operation) = {
      metadata: "access.SetAccessBindingsMetadata"
      response: "google.protobuf.Empty"
    };
  }

  // Updates access bindings for the specified rule.
  rpc UpdateAccessBindings (access.UpdateAccessBindingsRequest) returns (operation.Operation) {
    option (google.api.http) = {
      patch: "/eventrouter/v1/rules/{resource_id}:updateAccessBindings"
      body: "*"
    };
    option (yandex.cloud.api.operation) = {
      metadata: "access.UpdateAccessBindingsMetadata"
      response: "google.protobuf.Empty"
    };
  }

  // Lists operations for the specified rule.
  rpc ListOperations (ListRuleOperationsRequest) returns (ListRuleOperationsResponse) {
    option (google.api.http) = { get: "/eventrouter/v1/rules/{rule_id}/operations" };
  }
}

message GetRuleRequest {
  // ID of the rule to return.
  string rule_id = 1 [(required) = true];
}

message ListRulesRequest {
  // ID of the folder on bus to list rules in.
  oneof container_id {
    option (exactly_one) = true;

    // ID of the bus to list rules in.
    string bus_id = 1;

    // ID of the folder to list rules in.
    string folder_id = 2;
  }

  // The maximum number of results per response.
  int64 page_size = 3;

  // Page token. To get the next page of results, set `page_token` to the
  // `next_page_token` returned by a previous list request.
  string page_token = 4;

  // Supported fields for filter:
  //   name
  //   created_at
  string filter = 5;
}

message ListRulesResponse {
  // List of rules.
  repeated Rule rules = 1;

  // Token for getting the next page of the list of rules.
  string next_page_token = 2;
}

message CreateRuleRequest {
  // ID of the bus to create a rule for.
  string bus_id = 1 [(required) = true];

  // Name of the rule.
  string name = 2 [(pattern) = "|[a-z][-a-z0-9]{1,61}[a-z0-9]"];
  
  // Description of the rule.
  string description = 3 [(length) = "<=256"];

  // Labels for the rule.
  map<string, string> labels = 4 [(size) = "<=64", (length) = "<=63", (pattern) = "[-_0-9a-z]*", (map_key).length = "1-63", (map_key).pattern = "[a-z][-_0-9a-z]*"];
  
  // Filter for the rule.
  Filter filter = 5;

  // Targets for the rule.
  repeated Target targets = 6 [(size) = "1-5"];

  // Flag that disallow deletion of the rule.
  bool deletion_protection = 7;
}

message CreateRuleMetadata {
  // ID of the rule that is being created.
  string rule_id = 1;

  // ID of the bus that the rule belongs to.
  string bus_id = 2;
}

message UpdateRuleRequest {
  // ID of the rule to update.
  string rule_id = 1 [(required) = true];

  // Field mask that specifies which fields of the rule are going to be updated.
  google.protobuf.FieldMask update_mask = 2;

  // New name of the rule.
  string name = 3 [(pattern) = "|[a-z][-a-z0-9]{1,61}[a-z0-9]"];

  // New description of the rule.
  string description = 4 [(length) = "<=256"];

  // New labels for the rule.
  map<string, string> labels = 5 [(size) = "<=64", (length) = "<=63", (pattern) = "[-_0-9a-z]*", (map_key).length = "1-63", (map_key).pattern = "[a-z][-_0-9a-z]*"];
  
  // New filter for the rule.
  Filter filter = 6;

  // New targets for the rule.
  repeated Target targets = 7 [(size) = "1-5"];

  // New flag that disallow deletion of the rule.
  bool deletion_protection = 8;
}

message UpdateRuleMetadata {
  // ID of the rule that is being updated.
  string rule_id = 1 [(required) = true];
}

message DeleteRuleRequest {
  // ID of the rule to delete.
  string rule_id = 1 [(required) = true];
}

message DeleteRuleMetadata {
  // ID of the rule that is being deleted.
  string rule_id = 1 [(required) = true];
}

message ListRuleOperationsRequest {
  // ID of the rule to list operations for.
  string rule_id = 1 [(required) = true];

  // The maximum number of results per response.
  int64 page_size = 2 [(value) = "0-1000"];

  // Page token. To get the next page of results, set `page_token` to the
  // `next_page_token` returned by a previous list request.
  string page_token = 3 [(length) = "<=100"];

  // Supported attributes for filter:
  //   description
  //   created_at
  //   modified_at
  //   created_by
  //   done
  string filter = 4 [(length) = "<=1000"];
}

message ListRuleOperationsResponse {
  // List of operations for the specified rule.
  repeated operation.Operation operations = 1;

  // Token for getting the next page of the list of operations.
  string next_page_token = 2;
}

message EnableRuleRequest {
  // ID of the rule to enable.
  string rule_id = 1 [(required) = true];
}

message EnableRuleMetadata {
  // ID of the rule that is being enabled.
  string rule_id = 1 [(required) = true];
}

message DisableRuleRequest {
  // ID of the rule to disable.
  string rule_id = 1 [(required) = true];
}

message DisableRuleMetadata {
  // ID of the rule that is being disabled.
  string rule_id = 1 [(required) = true];
}
